"ChangeLog"

2005-02-17	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-04-object-01-13-alias-01:
	  New branch created for working on alias_connections.  
	  May require some serious reworking and sub-typing.  
	  Issue is what the interface for unrolled instance connection
	  should be.  

	* ARTXX-00-01-04-main-00-04-object-01-13:
	  Prelimiary testing of saving and restoring bool instance aliases, 
	  where there are no actual connections.  So far so good.
	  Some minor updates to instance dumping.  
	  Tests were also updated because of expansion in bool
	  instance object binary size.  


2005-02-16	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-04-object-01-12:
	  Wrote draft of code to save and restore bool aliases, 
	  untested and disabled, so all tests still pass.  
	  Will enable and test in next revision.  

	* ARTXX-00-01-04-main-00-04-object-01-11-merged-gcc4-02:
	  Merged tiny revisions from the -09-gcc child branch, 
	  through rev -02.
	  These were micro-changes needed to make gcc-4.0 (prerelease)
	  happy, because of more standard-conforming behavior.  
	  That snapshot of gcc-4.0 (20050130) will not actually compile
	  succesfully due to a bug discovered, see 02-14 entry of ChangeLog.  

	* ARTXX-00-01-04-main-00-04-object-01-10-merged-multikey-09:
	  Merged all revisions from the -09-multikey child branch 
	  (through rev. -09)

	* ARTXX-00-01-04-main-00-04-object-01-09-multikey-07:
	  bool_instance_collections (scalar, array<D>) are once again
	  reconstructible *without* connections.  
	  (A lotta work to get nowhere!)
	  Next revision will massively clean-up before porting over the 
	  overall changes with bool collections to int<W> collections.
	  Then we'll attempt to reconstruct aliases... ooooh...

	+ -multikey-08:
	  Massively cleaned up, as promised.
	  Affected: multikey_map-related files, art_object_instance_bool.*

	+ -multikey-09: