@@ -1,7 +1,7 @@
 /**
 	\file "art_object_module.h"
 	Classes that represent a single compilation module, a file.  
-	$Id: art_object_module.h,v 1.11.2.1 2005/02/03 03:34:54 fang Exp $
+	$Id: art_object_module.h,v 1.11.2.1.10.1 2005/02/18 01:25:34 fang Exp $
  */
 
 #ifndef	__ART_OBJECT_MODULE_H__
@@ -28,7 +28,10 @@ using util::persistent_object_manager;
 	2) source-order-dependent data
  */
 class module :
-	public object, public persistent
+#if 0
+	public object, 
+#endif
+	public persistent
 #if 0
 	// changing this to private or protected crashes on darwin-gcc-3.3!?
 	, private sequential_scope
