@@ -8,6 +8,12 @@
 	  Issue is what the interface for unrolled instance connection
 	  should be.  
 
+	+ -alias-02:
+	  Cleaned up some of object class heirarchy, having object as
+	  super-uber-parent is totally unnecessary in most cases.  
+	  Preparing to perform some major surgery on instance_reference
+	  and alias_connection class sub-heirarchy for connections.  
+
 	* ARTXX-00-01-04-main-00-04-object-01-13:
 	  Prelimiary testing of saving and restoring bool instance aliases, 
 	  where there are no actual connections.  So far so good.
